fix: include unit tests